--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -1,5 +1,5 @@
 #LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 506
+\lyxformat 508
 \begin_document
 \begin_header
 \save_transient_properties true
@@ -2463,7 +2463,21 @@ This setup implies that owners will choose a savings path contingent on
 \end_inset
 
 , such that they can satisfy the final period constraint.
- The setup is formally defined in subsections 
+ That said, if the house price falls enough, the household may end up with
+ negative equity, which is defined as 
+\begin_inset Formula $-a_{t}>p_{t}$
+\end_inset
+
+.
+ Sale of the house would not suffice to make good for the outstanding mortgage
+ debt.
+ Households may default on the mortgage in such a situation, incuring a
+ penalty in the form of a one-period proportional wage penalty 
+\begin_inset Formula $\kappa$
+\end_inset
+
+.
+ Subsections 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "subsec:Budget-stayers"
@@ -2477,7 +2491,7 @@ reference "subsec:Budget-movers"
 
 \end_inset
 
- which describe the budget constraints.
+ below describe the budget constraints in greater detail.
 \end_layout
 
 \begin_layout Subsection
@@ -2494,7 +2508,7 @@ Moving across locations is assumed to be costly in terms of utility.
 \begin_inset Formula $\Delta(d,x)$
 \end_inset
 
- the utility costs of moving from 
+ the utility costs of moving to 
 \begin_inset Formula $d$
 \end_inset
 
@@ -2556,7 +2570,6 @@ reference "eq:moving-cost"
 \end_inset
 
 .
- 
 \end_layout
 
 \begin_layout Standard
@@ -2799,7 +2812,7 @@ given the state, compute optimal behaviour in all
 \end_inset
 
  regions, i.e.
-\begin_inset Separator parbreak
+\begin_inset Separator latexpar
 \end_inset
 
 
@@ -3342,6 +3355,32 @@ a_{it+1} & \geq & -(1-\chi)p_{dt}\label{eq:budget-own-borrow}
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+Regarding mortgage default, the budget constraint for a defaulting owner
+ is equivalent to a renter with period income 
+\begin_inset Formula $(1-\iota)y_{idt}$
+\end_inset
+
+.
+ In other words, mortgage default is such that 
+\begin_inset Formula $h_{it}=0,a_{it}=0$
+\end_inset
+
+, and equation 
+\begin_inset CommandInset ref
+LatexCommand eqref
+reference "eq:budget-renter-stay"
+
+\end_inset
+
+ is modified with income 
+\begin_inset Formula $(1-\iota)y_{idt}$
+\end_inset
+
+.
+ The analogous modification applies to the case of movers who default below.
 \end_layout
 
 \begin_layout Subsubsection
